// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/Tag Snap Shot Chip 1`] = `
<span
  className="rounded-full px-4 py-2 text-xs font-bold"
  style={
    {
      "backgroundColor": "#222222",
      "color": "white",
    }
  }
>
  Chip
</span>
`;

exports[`ui/Tag Snap Shot button Chip 1`] = `
<button
  className="rounded-full px-4 py-2 text-xs font-bold"
  onClick={[MockFunction]}
  style={
    {
      "border": "1px solid #222222",
      "color": "#222222",
    }
  }
>
  Chip
</button>
`;

exports[`ui/Tag Snap Shot outline Chip 1`] = `
<span
  className="rounded-full px-4 py-2 text-xs font-bold"
  style={
    {
      "border": "1px solid #222222",
      "color": "#222222",
    }
  }
>
  Chip
</span>
`;
